--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -33,7 +33,7 @@ html {
     max-width: 40%;
     min-width: 30%;
     box-shadow: -40px 40px 40px rgba(0, 0, 0, 0.5);
-    padding: 10px;
+    padding: 20px;
     border-radius: 2px;
     min-height: 100%;
     display: flex;
@@ -53,12 +53,15 @@ html {
     flex-grow: 1;
     display: flex;
     white-space: pre-line;
+    margin-right: 30%;
     align-items: center;
-    font-size: 3rem;
+    font-size: 2.5rem;
+    letter-spacing: 3px;
 }
 
 #card-author {
     font-style: italic;
+    letter-spacing: 3px;
 }
 
 /*
