--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,3 +9,9 @@ body {
   background: $cardcolor;
   color: mintcream;
 }
+#card-back {
+  background: $cardcolor;
+}
+#card-back-last{
+  background: $cardcolor;
+}
